Bug 799956 - Mark BasicLayerManagers that don't retain content as supporting component alpha layers. r=roc